<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chat_surface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/icon_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_mtrl_back"
            app:navigationIconTint="@color/chat_text_primary"
            app:title="@string/import_icon_title"
            app:titleTextColor="@color/chat_text_primary" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/icon_tabs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:tabIndicatorColor="@color/chat_accent"
            app:tabSelectedTextColor="@color/chat_accent"
            app:tabTextColor="@color/chat_text_secondary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/icon_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingStart="6dp"
        android:paddingTop="8dp"
        android:paddingEnd="6dp"
        android:paddingBottom="88dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/icon_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/import_icon_filter"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/chat_accent"
        app:icon="@drawable/ic_mtrl_tune"
        app:iconTint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
